# energy_sub_dynamic

./: .gitignore  CMakeLists.txt  GITHUB_PUBLISH_CN.md  PIPELINE_CN.md  README.md
data/example_1/: ball.msh  ball_ck_lam57692.307692_mu38461.538462_alpha1.000000_rho1000.000000_result.json  result_json_format.md
shaders/: build_world_from_reduced.comp  gradient_tet_stage.comp  gradient_vertex_gather.comp  hessp_tet_stage.comp  hessp_vertex_gather.comp  predict_state.comp  project_world_to_reduced_stage1.comp  project_world_to_reduced_stage2.comp  reconstruct_x_from_reduced.comp  reduced_cg_init.comp  reduced_cg_update.comp  update_velocity_state.comp
src/: csr_builder.cpp  csr_builder.h  main.cpp  mesh_loader.cpp  mesh_loader.h  sim_params.h  simple_renderer.cpp  simple_renderer.h  subspace_loader.cpp  subspace_loader.h  subspace_simulator.cpp  subspace_simulator.h  types.h  vk_two_phase.cpp  vk_two_phase.h  vulkan_context.cpp  vulkan_context.h
